updated to OpenJDK-21 and JEP 434