@@ -24,8 +24,7 @@ package de.ibapl.jnhw.common.test.memory;
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.AsSignedInt;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -62,13 +61,13 @@ public class AsSignedIntTest {
 
     @Test
     public void testNative() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            AsSignedInt instance = AsSignedInt.allocateNative(BaseDataType.int16_t, ms);
+        try (Arena ms = Arena.openConfined()) {
+            AsSignedInt instance = AsSignedInt.allocateNative(BaseDataType.int16_t, ms.scope());
             short expResult = 0x2010;
             instance.setFromSignedInt(expResult);
             assertEquals(expResult, instance.getAsSignedInt());
             assertThrows(IllegalArgumentException.class, () -> instance.setFromSignedInt(Integer.MAX_VALUE));
-            assertThrows(IllegalArgumentException.class, () -> new AsSignedInt(BaseDataType.uint8_t, MemorySegment.allocateNative(BaseDataType.uint8_t.SIZE_OF, ms), 0));
+            assertThrows(IllegalArgumentException.class, () -> new AsSignedInt(BaseDataType.uint8_t, ms.allocate(BaseDataType.uint8_t.SIZE_OF), 0));
         }
     }
 }
