@@ -24,8 +24,7 @@ package de.ibapl.jnhw.common.test.memory;
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.AsUnsignedLong;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -62,12 +61,12 @@ public class AsUnsignedLongTest {
 
     @Test
     public void testNative() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            AsUnsignedLong instance = AsUnsignedLong.allocateNative(BaseDataType.uint32_t, ms);
+        try (Arena ms = Arena.openConfined()) {
+            AsUnsignedLong instance = AsUnsignedLong.allocateNative(BaseDataType.uint32_t, ms.scope());
             instance.setFromUnsignedLong(33);
             assertEquals(33, instance.getAsUnsignedLong());
             assertThrows(IllegalArgumentException.class, () -> instance.setFromUnsignedLong(-1));
-            assertThrows(IllegalArgumentException.class, () -> new AsUnsignedLong(BaseDataType.int8_t, MemorySegment.allocateNative(BaseDataType.int8_t.SIZE_OF, ms), 0));
+            assertThrows(IllegalArgumentException.class, () -> new AsUnsignedLong(BaseDataType.int8_t, ms.allocate(BaseDataType.int8_t.SIZE_OF), 0));
         }
     }
 
