@@ -25,8 +25,7 @@ import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.Int16_t;
 import de.ibapl.jnhw.common.memory.layout.Alignment;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -82,8 +81,8 @@ public class Int16_tTest {
      */
     @Test
     public void testRawInt16_t() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Int16_t instance = Int16_t.allocateNative(ms);
+        try (Arena ms = Arena.openConfined()) {
+            Int16_t instance = Int16_t.allocateNative(ms.scope());
             short expResult = 0x2010;
             instance.int16_t(expResult);
             assertEquals(expResult, instance.int16_t());
@@ -92,8 +91,8 @@ public class Int16_tTest {
 
     @Test
     public void testNativeToString() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Int16_t instance = new Int16_t(MemorySegment.allocateNative(BaseDataType.int16_t.SIZE_OF, ms), 0);
+        try (Arena ms = Arena.openConfined()) {
+            Int16_t instance = new Int16_t(ms.allocate(BaseDataType.int16_t.SIZE_OF), 0);
             instance.int16_t((short) -2);
             assertEquals("-2", instance.nativeToString());
             assertEquals("0xfffe", instance.nativeToHexString());
