@@ -25,8 +25,7 @@ import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.Int8_t;
 import de.ibapl.jnhw.common.memory.layout.Alignment;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -82,8 +81,8 @@ public class Int8_tTest {
      */
     @Test
     public void testRawInt8_t() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Int8_t instance = Int8_t.allocateNative(ms);
+        try (Arena ms = Arena.openConfined()) {
+            Int8_t instance = Int8_t.allocateNative(ms.scope());
             byte expResult = 0x10;
             instance.int8_t(expResult);
             assertEquals(expResult, instance.int8_t());
@@ -92,8 +91,8 @@ public class Int8_tTest {
 
     @Test
     public void testNativeToString() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Int8_t instance = new Int8_t(MemorySegment.allocateNative(BaseDataType.int8_t.SIZE_OF, ms), 0);
+        try (Arena ms = Arena.openConfined()) {
+            Int8_t instance = new Int8_t(ms.allocate(BaseDataType.int8_t.SIZE_OF), 0);
             instance.int8_t((byte) -2);
             assertEquals("-2", instance.nativeToString());
             assertEquals("0xfe", instance.nativeToHexString());
