@@ -26,8 +26,7 @@ import de.ibapl.jnhw.common.memory.Int32_t;
 import de.ibapl.jnhw.common.memory.Int64_t;
 import de.ibapl.jnhw.common.memory.Signed_Long;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -64,8 +63,8 @@ public class Signed_LongTest {
 
     @Test
     public void testNative() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Signed_Long instance = Signed_Long.allocateNative(ms);
+        try (Arena ms = Arena.openConfined()) {
+            Signed_Long instance = Signed_Long.allocateNative(ms.scope());
             long input64 = 0x8070605040302010L;
             if (BaseDataType.C_long.SIZE_OF == 8) {
                 instance.signed_long(input64);
@@ -88,8 +87,8 @@ public class Signed_LongTest {
 
     @Test
     public void testNativeToString() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Signed_Long instance = new Signed_Long(MemorySegment.allocateNative(Signed_Long.DATA_TYPE.SIZE_OF, ms), 0);
+        try (Arena ms = Arena.openConfined()) {
+            Signed_Long instance = new Signed_Long(ms.allocate(Signed_Long.DATA_TYPE.SIZE_OF), 0);
             if (BaseDataType.C_long.SIZE_OF == 8) {
                 Int64_t int64_t = Int64_t.map(instance, 0);
                 int64_t.int64_t(0xfffffffffffffffeL);
