@@ -25,8 +25,7 @@ import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.Uint64_t;
 import de.ibapl.jnhw.common.memory.layout.Alignment;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -85,8 +84,8 @@ public class Uint64_tTest {
      */
     @Test
     public void testRawUint64_t() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Uint64_t instance = Uint64_t.allocateNative(ms);
+        try (Arena ms = Arena.openConfined()) {
+            Uint64_t instance = Uint64_t.allocateNative(ms.scope());
             long expResult = 0x08070605040302010L;
             instance.uint64_t(expResult);
             assertEquals(expResult, instance.uint64_t());
@@ -95,8 +94,8 @@ public class Uint64_tTest {
 
     @Test
     public void testNativeToString() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Uint64_t instance = new Uint64_t(MemorySegment.allocateNative(BaseDataType.uint64_t.SIZE_OF, ms), 0);
+        try (Arena ms = Arena.openConfined()) {
+            Uint64_t instance = new Uint64_t(ms.allocate(BaseDataType.uint64_t.SIZE_OF), 0);
             instance.uint64_t(-2);
             assertEquals(Long.toUnsignedString(-2), instance.nativeToString());
             assertEquals("0xfffffffffffffffe", instance.nativeToHexString());
