@@ -25,8 +25,7 @@ import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.Uint8_t;
 import de.ibapl.jnhw.common.memory.layout.Alignment;
 import de.ibapl.jnhw.common.test.JnhwTestLogger;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import static org.junit.jupiter.api.Assertions.*;
@@ -85,8 +84,8 @@ public class Uint8_tTest {
      */
     @Test
     public void testRawUint8_t() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Uint8_t instance = Uint8_t.allocateNative(ms);
+        try (Arena ms = Arena.openConfined()) {
+            Uint8_t instance = Uint8_t.allocateNative(ms.scope());
             byte expResult = 0x10;
             instance.uint8_t(expResult);
             assertEquals(expResult, instance.uint8_t());
@@ -98,8 +97,8 @@ public class Uint8_tTest {
 
     @Test
     public void testNativeToString() {
-        try (MemorySession ms = MemorySession.openConfined()) {
-            Uint8_t instance = new Uint8_t(MemorySegment.allocateNative(BaseDataType.uint8_t.SIZE_OF, ms), 0);
+        try (Arena ms = Arena.openConfined()) {
+            Uint8_t instance = new Uint8_t(ms.allocate(BaseDataType.uint8_t.SIZE_OF), 0);
             instance.uint8_t((byte) -2);
             assertEquals(String.valueOf(0x00FF & -2), instance.nativeToString());
             assertEquals(String.valueOf(Byte.toUnsignedInt((byte) -2)), instance.nativeToString());
