@@ -25,10 +25,9 @@ import de.ibapl.jnhw.common.exception.NativeErrorException;
 import de.ibapl.jnhw.common.exception.NoSuchNativeMethodException;
 import de.ibapl.jnhw.common.memory.Int32_t;
 import de.ibapl.jnhw.libloader.MultiarchTupelBuilder;
-import de.ibapl.jnhw.libloader.OS;
 import de.ibapl.jnhw.posix.sys.Types;
 import de.ibapl.jnhw.util.posix.DefinesTest;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.junit.jupiter.api.AfterAll;
@@ -87,12 +86,12 @@ public class PthreadTest {
         JnhwTestLogger.logAfterAll(testTnfo);
     }
 
-    private MemorySession ms;
+    private Arena ms;
 
     @BeforeEach
     public void setUp(TestInfo testInfo) throws Exception {
         JnhwTestLogger.logBeforeEach(testInfo);
-        ms = MemorySession.openConfined();
+        ms = Arena.openConfined();
     }
 
     @AfterEach
@@ -106,7 +105,7 @@ public class PthreadTest {
      */
     @Test
     public void testPthread_self() {
-        Pthread.Pthread_t result = Pthread.pthread_self(ms);
+        Pthread.Pthread_t result = Pthread.pthread_self(ms.scope());
         Assertions.assertNotNull(result);
         JnhwTestLogger.logTest("PTHREAD ID: " + result);
     }
@@ -117,16 +116,16 @@ public class PthreadTest {
     @Test
     public void testPthread_equal() throws Exception {
         Assertions.assertThrows(NullPointerException.class, () -> {
-            Pthread.pthread_equal(null, Pthread.pthread_self(ms));
+            Pthread.pthread_equal(null, Pthread.pthread_self(ms.scope()));
         });
         Assertions.assertThrows(NullPointerException.class, () -> {
-            Pthread.pthread_equal(Pthread.pthread_self(ms), null);
+            Pthread.pthread_equal(Pthread.pthread_self(ms.scope()), null);
         });
         Assertions.assertThrows(NullPointerException.class, () -> {
             Pthread.pthread_equal(null, null);
         });
-        final Pthread.Pthread_t t1 = Pthread.pthread_self(ms);
-        final Pthread.Pthread_t t2 = Pthread.pthread_self(ms);
+        final Pthread.Pthread_t t1 = Pthread.pthread_self(ms.scope());
+        final Pthread.Pthread_t t2 = Pthread.pthread_self(ms.scope());
 
         Assertions.assertTrue(Pthread.pthread_equal(t1, t2));
 
@@ -137,8 +136,8 @@ public class PthreadTest {
         Thread t3 = new Thread(() -> {
             try {
                 //TODO move outside - currently junit will crash
-                final MemorySession sharedSession = MemorySession.openShared();
-                objectRef[0] = Pthread.pthread_self(sharedSession);
+                final Arena sharedSession = Arena.openShared();
+                objectRef[0] = Pthread.pthread_self(sharedSession.scope());
             } catch (Throwable t) {
                 Assertions.fail(t);
             }
@@ -157,31 +156,31 @@ public class PthreadTest {
      */
     @Test
     public void testPthread_getcpuclockid() throws Exception {
-        Types.Clockid_t clock_id = Types.Clockid_t.allocateNative(ms);
+        Types.Clockid_t clock_id = Types.Clockid_t.allocateNative(ms.scope());
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE ->
                 Assertions.assertThrows(NoSuchNativeMethodException.class,
-                        () -> Pthread.pthread_getcpuclockid(Pthread.pthread_self(ms), clock_id));
+                        () -> Pthread.pthread_getcpuclockid(Pthread.pthread_self(ms.scope()), clock_id));
             default -> {
                 Assertions.assertThrows(NullPointerException.class,
                         () -> Pthread.pthread_getcpuclockid(null, clock_id));
 //This will crash with SIGSEV
-//            Pthread.pthread_getcpuclockid(Pthread.Pthread_t.ofAddress(MemoryAddress.ofLong(1024), scope), clock_id);
-                Pthread.pthread_getcpuclockid(Pthread.pthread_self(ms), clock_id);
+//            Pthread.pthread_getcpuclockid(Pthread.Pthread_t.ofAddress(MemorySegment.ofAddress(1024), scope), clock_id);
+                Pthread.pthread_getcpuclockid(Pthread.pthread_self(ms.scope()), clock_id);
             }
         }
     }
 
     @Test
     public void testPthread_t() {
-        Pthread.Pthread_t pthread_t = Pthread.Pthread_t.allocateNative(ms);
+        Pthread.Pthread_t pthread_t = Pthread.Pthread_t.allocateNative(ms.scope());
         Assertions.assertNotNull(pthread_t.toString());
         Assertions.assertNotNull(pthread_t.nativeToString());
     }
 
     @Test
     public void testPthread_attr_t() throws Exception {
-        Pthread.Pthread_attr_t pthread_attr_t = Pthread.Pthread_attr_t.allocateNative(ms);
+        Pthread.Pthread_attr_t pthread_attr_t = Pthread.Pthread_attr_t.allocateNative(ms.scope());
         Pthread.pthread_attr_init(pthread_attr_t);
         Assertions.assertNotNull(pthread_attr_t.toString());
         Assertions.assertNotNull(pthread_attr_t.nativeToString());
@@ -190,9 +189,9 @@ public class PthreadTest {
 
     @Test
     public void testPthread_attr_setget_schedparam() throws Exception {
-        Pthread.Pthread_attr_t attr = Pthread.Pthread_attr_t.allocateNative(ms);
+        Pthread.Pthread_attr_t attr = Pthread.Pthread_attr_t.allocateNative(ms.scope());
         Pthread.pthread_attr_init(attr);
-        Sched.Sched_param param = Sched.Sched_param.allocateNative(ms);
+        Sched.Sched_param param = Sched.Sched_param.allocateNative(ms.scope());
         param.sched_priority(0); //TODO Any other will give a EINVAL ????
         try {
             JnhwTestLogger.logTest("pthread_attr_setschedparam ");
@@ -205,7 +204,7 @@ public class PthreadTest {
             Pthread.pthread_attr_setschedparam(attr, param);
 
             JnhwTestLogger.logTest("pthread_attr_getschedparam");
-            Sched.Sched_param param1 = Sched.Sched_param.allocateNative(ms);
+            Sched.Sched_param param1 = Sched.Sched_param.allocateNative(ms.scope());
             Assertions.assertThrows(NullPointerException.class, () -> {
                 Pthread.pthread_attr_getschedparam(null, param1);
             });
@@ -221,9 +220,9 @@ public class PthreadTest {
 
     @Test
     public void testPthread_attr_setget_inheritsched() throws Exception {
-        Pthread.Pthread_attr_t attr = Pthread.Pthread_attr_t.allocateNative(ms);
+        Pthread.Pthread_attr_t attr = Pthread.Pthread_attr_t.allocateNative(ms.scope());
         Pthread.pthread_attr_init(attr);
-        Int32_t inheritsched = Int32_t.allocateNative(ms);
+        Int32_t inheritsched = Int32_t.allocateNative(ms.scope());
         try {
             JnhwTestLogger.logTest("pthread_attr_getinheritsched");
             Assertions.assertThrows(NullPointerException.class, () -> {
@@ -246,34 +245,34 @@ public class PthreadTest {
 
     @Test
     public void testPthread_setget_schedparam() throws NativeErrorException {
-        Sched.Sched_param param = Sched.Sched_param.allocateNative(ms);
-        Int32_t policy = Int32_t.allocateNative(ms);
+        Sched.Sched_param param = Sched.Sched_param.allocateNative(ms.scope());
+        Int32_t policy = Int32_t.allocateNative(ms.scope());
 
         JnhwTestLogger.logTest("pthread_getschedparam");
 
         Assertions.assertThrows(NullPointerException.class, () -> {
-            Pthread.pthread_getschedparam(Pthread.pthread_self(ms), policy, null);
+            Pthread.pthread_getschedparam(Pthread.pthread_self(ms.scope()), policy, null);
         });
         Assertions.assertThrows(NullPointerException.class, () -> {
             Pthread.pthread_getschedparam(null, policy, param);
         });
 
-        Pthread.pthread_getschedparam(Pthread.pthread_self(ms), policy, param);
+        Pthread.pthread_getschedparam(Pthread.pthread_self(ms.scope()), policy, param);
         Assertions.assertEquals(Sched.SCHED_OTHER, policy.int32_t());
 
         JnhwTestLogger.logTest("pthread_setschedparam");
 
-        Pthread.pthread_setschedparam(Pthread.pthread_self(ms), policy.int32_t(), param);
+        Pthread.pthread_setschedparam(Pthread.pthread_self(ms.scope()), policy.int32_t(), param);
 
         param.sched_priority(Integer.MAX_VALUE);
         switch (MultiarchTupelBuilder.getOS()) {
             case FREE_BSD, OPEN_BSD ->
-                Pthread.pthread_setschedparam(Pthread.pthread_self(ms), policy.int32_t(), param);
+                Pthread.pthread_setschedparam(Pthread.pthread_self(ms.scope()), policy.int32_t(), param);
             default -> {
                 NativeErrorException nee = Assertions.assertThrows(NativeErrorException.class, () -> {
                     //TODO we must set this here oterwise error will not be EINVAL but ENOENT
                     Errno.errno(0);
-                    Pthread.pthread_setschedparam(Pthread.pthread_self(ms), policy.int32_t(), param);
+                    Pthread.pthread_setschedparam(Pthread.pthread_self(ms.scope()), policy.int32_t(), param);
                 });
                 switch (MultiarchTupelBuilder.getOS()) {
                     case APPLE ->
@@ -286,7 +285,7 @@ public class PthreadTest {
         }
 
         Assertions.assertThrows(NullPointerException.class, () -> {
-            Pthread.pthread_setschedparam(Pthread.pthread_self(ms), 0, null);
+            Pthread.pthread_setschedparam(Pthread.pthread_self(ms.scope()), 0, null);
         });
 
         Assertions.assertThrows(NullPointerException.class, () -> {
@@ -301,12 +300,12 @@ public class PthreadTest {
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE, FREE_BSD, OPEN_BSD ->
                 Assertions.assertThrows(NoSuchNativeMethodException.class,
-                        () -> Pthread.pthread_setschedprio(Pthread.pthread_self(ms), 0));
+                        () -> Pthread.pthread_setschedprio(Pthread.pthread_self(ms.scope()), 0));
             default -> {
                 Assertions.assertThrows(NullPointerException.class, () -> {
                     Pthread.pthread_setschedprio(null, 0);
                 });
-                Pthread.pthread_setschedprio(Pthread.pthread_self(ms), 0);
+                Pthread.pthread_setschedprio(Pthread.pthread_self(ms.scope()), 0);
             }
         }
     }
@@ -315,9 +314,9 @@ public class PthreadTest {
     @Disabled //It looks, that running this test will screw up the system internally - later tests will hang.
     //TODO What is going on?
     public void testPthread_t_Cancel() throws Exception {
-        Pthread.Pthread_t me = Pthread.pthread_self(ms);
-        Int32_t oldstate = Int32_t.allocateNative(ms);
-        Int32_t oldtype = Int32_t.allocateNative(ms);
+        Pthread.Pthread_t me = Pthread.pthread_self(ms.scope());
+        Int32_t oldstate = Int32_t.allocateNative(ms.scope());
+        Int32_t oldtype = Int32_t.allocateNative(ms.scope());
 
         Pthread.pthread_setcancelstate(Pthread.PTHREAD_CANCEL_DISABLE, oldstate);
         Pthread.pthread_setcancelstate(oldstate.int32_t(), oldstate);
@@ -335,7 +334,7 @@ public class PthreadTest {
             try {
                 Pthread.pthread_testcancel();
 
-                objectRef[0] = Pthread.pthread_self(ms);
+                objectRef[0] = Pthread.pthread_self(ms.scope());
                 synchronized (objectRef) {
                     objectRef.notifyAll();
                 }
