@@ -36,9 +36,8 @@ import de.ibapl.jnhw.libloader.MultiarchTupelBuilder;
 import de.ibapl.jnhw.libloader.OS;
 import de.ibapl.jnhw.util.posix.DefinesTest;
 import de.ibapl.jnhw.util.posix.upcall.Callback__V__UnionSigval;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
@@ -192,7 +191,7 @@ public class SignalTest {
         JnhwTestLogger.logAfterAll(testTnfo);
     }
 
-    private MemorySession ms;
+    private Arena ms;
 
     public SignalTest() {
     }
@@ -200,7 +199,7 @@ public class SignalTest {
     @BeforeEach
     public void setUp(TestInfo testInfo) throws Exception {
         JnhwTestLogger.logBeforeEach(testInfo);
-        ms = MemorySession.openShared();
+        ms = Arena.openShared();
     }
 
     @AfterEach
@@ -217,7 +216,7 @@ public class SignalTest {
         final int sig = Signal.SIGCHLD; //TODO SIGQUIT blows anything away .... WHY??? pthread_kill
 
         final Integer[] sigRef = new Integer[1];
-        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms.scope());
         act.sa_flags(0);
         Signal.sigemptyset(act.sa_mask);
 
@@ -225,7 +224,7 @@ public class SignalTest {
             @Override
             protected void callback(int sig) {
                 synchronized (sigRef) {
-                    JnhwTestLogger.logTest("pthread_t of signalhandler: " + Pthread.pthread_self(ms) + " Java thread ID: " + Thread.currentThread().threadId());
+                    JnhwTestLogger.logTest("pthread_t of signalhandler: " + Pthread.pthread_self(ms.scope()) + " Java thread ID: " + Thread.currentThread().threadId());
                     sigRef[0] = sig;
                     sigRef.notifyAll();
                 }
@@ -234,10 +233,10 @@ public class SignalTest {
         };
         act.sa_handler(sa_handler);
 
-        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms.scope());
         Signal.sigaction(sig, act, oact);
         try {
-            JnhwTestLogger.logTest("pthread_t of testKill: " + Pthread.pthread_self(ms) + " Java thread ID: " + Thread.currentThread().threadId());
+            JnhwTestLogger.logTest("pthread_t of testKill: " + Pthread.pthread_self(ms.scope()) + " Java thread ID: " + Thread.currentThread().threadId());
             Signal.kill(Unistd.getpid(), sig);
             synchronized (sigRef) {
                 if (sigRef[0] == null) {
@@ -258,7 +257,7 @@ public class SignalTest {
         final int sig = Signal.SIGCHLD;
 
         final Integer[] sigRef = new Integer[1];
-        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms.scope());
         act.sa_flags(0);
         Signal.sigemptyset(act.sa_mask);
 
@@ -273,7 +272,7 @@ public class SignalTest {
         };
         act.sa_handler(sa_handler);
 
-        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms.scope());
         Signal.sigaction(sig, act, oact);
         try {
             Signal.killpg(Unistd.getpgrp(), sig);
@@ -293,7 +292,7 @@ public class SignalTest {
      */
     @Test
     public void testPsiginfo() throws Exception {
-        Signal.Siginfo_t pinfo = Signal.Siginfo_t.allocateNative(ms);
+        Signal.Siginfo_t pinfo = Signal.Siginfo_t.allocateNative(ms.scope());
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE, FREE_BSD, OPEN_BSD ->
                 Assertions.assertThrows(NoSuchNativeMethodException.class,
@@ -346,13 +345,13 @@ public class SignalTest {
      */
     @Test
     public void testPthread_kill() throws Exception {
-        JnhwTestLogger.logTest("pthread_t of testPthread_kill: " + Pthread.pthread_self(ms) + " Java thread ID: " + Thread.currentThread().threadId());
+        JnhwTestLogger.logTest("pthread_t of testPthread_kill: " + Pthread.pthread_self(ms.scope()) + " Java thread ID: " + Thread.currentThread().threadId());
 
         final int sig = Signal.SIGCHLD; //TODO SIGQUIT blows anything away .... WHY??? pthread_kill
 
         final Integer[] sigRef = new Integer[1];
         final Throwable[] error = new Throwable[1];
-        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms.scope());
         act.sa_flags(0);
         Signal.sigemptyset(act.sa_mask);
 
@@ -360,18 +359,18 @@ public class SignalTest {
             @Override
             protected void callback(int sig) {
                 sigRef[0] = sig;
-                JnhwTestLogger.logTest("pthread_t of signalhadler: " + Pthread.pthread_self(ms) + " Java thread ID: " + Thread.currentThread().threadId() + " signal: " + sig);
+                JnhwTestLogger.logTest("pthread_t of signalhadler: " + Pthread.pthread_self(ms.scope()) + " Java thread ID: " + Thread.currentThread().threadId() + " signal: " + sig);
             }
         };
         act.sa_handler(sa_handler);
 
-        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms.scope());
         Signal.sigaction(sig, act, oact);
         try {
             Thread t = new Thread(() -> {
                 try {
-                    JnhwTestLogger.logTest("pthread_t of thread: " + Pthread.pthread_self(ms) + " Java thread ID: " + Thread.currentThread().threadId());
-                    Signal.pthread_kill(Pthread.pthread_self(ms), sig);
+                    JnhwTestLogger.logTest("pthread_t of thread: " + Pthread.pthread_self(ms.scope()) + " Java thread ID: " + Thread.currentThread().threadId());
+                    Signal.pthread_kill(Pthread.pthread_self(ms.scope()), sig);
                 } catch (NativeErrorException nee) {
                     error[0] = nee;
                 }
@@ -392,19 +391,19 @@ public class SignalTest {
     public void testPthread_sigmask() throws Exception {
         Signal.pthread_sigmask(0, null, null);
 
-        final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms);
+        final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms.scope());
         Signal.sigemptyset(oset);
         Signal.pthread_sigmask(0, null, oset);
         try {
             //make sure SIGUSR1 is in signak mask; we want to set it
             JnhwTestLogger.logTest("current sigprocmask: " + oset);
             Assertions.assertFalse(Signal.sigismember(oset, Signal.SIGUSR1));
-            Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+            Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(set);
             Signal.sigaddset(set, Signal.SIGUSR1);
             Signal.pthread_sigmask(Signal.SIG_BLOCK, set, null);
             //Test that SIGUSR1 was set
-            final Signal.Sigset_t changedSet = Signal.Sigset_t.allocateNative(ms);
+            final Signal.Sigset_t changedSet = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(changedSet);
             Signal.pthread_sigmask(0, null, changedSet);
             JnhwTestLogger.logTest("current sigprocmask: " + changedSet.toString());
@@ -423,7 +422,7 @@ public class SignalTest {
         final int sig = Signal.SIGCHLD;
 
         final Integer[] sigRef = new Integer[1];
-        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms.scope());
         act.sa_flags(0);
         Signal.sigemptyset(act.sa_mask);
 
@@ -435,7 +434,7 @@ public class SignalTest {
         };
         act.sa_handler(sa_handler);
 
-        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms.scope());
         Signal.sigaction(sig, act, oact);
         try {
             Signal.raise(sig);
@@ -452,7 +451,7 @@ public class SignalTest {
     public void testSigaction() throws Exception {
         final int SIG = Signal.SIGCHLD;
 
-        final Signal.Sigaction<?> act = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction<?> act = Signal.Sigaction.allocateNative(ms.scope());
         act.sa_flags(Signal.SA_RESTART);
         Signal.sigemptyset(act.sa_mask);
 
@@ -464,7 +463,7 @@ public class SignalTest {
         };
         act.sa_handler(sa_handler);
 
-        final Signal.Sigaction<?> oact = Signal.Sigaction.allocateNative(ms);
+        final Signal.Sigaction<?> oact = Signal.Sigaction.allocateNative(ms.scope());
         Signal.sigaction(SIG, null, oact);
         try {
             Signal.sigaction(SIG, act, oact);
@@ -475,7 +474,7 @@ public class SignalTest {
                 Assertions.assertEquals(Signal.SIG_DFL, oact.sa_handler());
             }
 
-            final Signal.Sigaction<?> actOut = Signal.Sigaction.allocateNative(ms);
+            final Signal.Sigaction<?> actOut = Signal.Sigaction.allocateNative(ms.scope());
             Signal.sigaction(SIG, oact, actOut);
 
             Assertions.assertEquals(act.sa_handler(), actOut.sa_handler());
@@ -490,9 +489,9 @@ public class SignalTest {
      */
     @Test
     public void testSigaltstack() throws Exception {
-        final MemoryHeap ss_sp = MemoryHeap.wrap(MemorySegment.allocateNative(Signal.MINSIGSTKSZ, ms));
-        Signal.Stack_t ss = Signal.Stack_t.allocateNativeAndInit(ms, Signal.SS_DISABLE, ss_sp);
-        Signal.Stack_t oss = Signal.Stack_t.allocateNative(ms);
+        final MemoryHeap ss_sp = MemoryHeap.wrap(ms.allocate(Signal.MINSIGSTKSZ));
+        Signal.Stack_t ss = Signal.Stack_t.allocateNativeAndInit(ms.scope(), Signal.SS_DISABLE, ss_sp);
+        Signal.Stack_t oss = Signal.Stack_t.allocateNative(ms.scope());
         Signal.sigaltstack(null, oss);
         try {
             Signal.sigaltstack(null, null);
@@ -521,7 +520,7 @@ public class SignalTest {
      */
     @Test
     public void testSigset_t() throws Exception {
-        Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+        Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
 
         Signal.sigemptyset(set);
         Assertions.assertFalse(Signal.sigismember(set, Signal.SIGKILL));
@@ -549,7 +548,7 @@ public class SignalTest {
             Assertions.assertThrows(NoSuchNativeMethodException.class, () -> Signal.sigrelse(sig));
         } else {
             Signal.sighold(sig);
-            Signal.Sigset_t mask = Signal.Sigset_t.allocateNative(ms);
+            Signal.Sigset_t mask = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(mask);
             Signal.sigprocmask(0, null, mask);
             Assertions.assertTrue(Signal.sigismember(mask, sig), "Signal is not in mask");
@@ -585,7 +584,7 @@ public class SignalTest {
     @Test
     public void testSiginterrupt() throws Exception {
         int sig = Signal.SIGCHLD;
-        Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms);
+        Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms.scope());
         Signal.sigaction(sig, null, oact);
         try {
             Signal.siginterrupt(sig, true);
@@ -706,7 +705,7 @@ public class SignalTest {
             Signal.sigpending(null);
         });
 
-        Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+        Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
         // Just make sure all bytes are set to 0 otherwise linux s390x may fail at byte comparision).
         OpaqueMemory.clear(set);
         Signal.sigemptyset(set);
@@ -723,19 +722,19 @@ public class SignalTest {
     public void testSigprocmask() throws Exception {
         Signal.sigprocmask(0, null, null);
 
-        final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms);
+        final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms.scope());
         Signal.sigemptyset(oset);
         Signal.sigprocmask(0, null, oset);
         try {
             //make sure SIGUSR1 is in signak mask; we want to set it
             JnhwTestLogger.logTest("current sigprocmask: " + oset);
             Assertions.assertFalse(Signal.sigismember(oset, Signal.SIGUSR1));
-            Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+            Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(set);
             Signal.sigaddset(set, Signal.SIGUSR1);
             Signal.sigprocmask(Signal.SIG_BLOCK, set, null);
             //Test that SIGUSR1 was set
-            final Signal.Sigset_t changedSet = Signal.Sigset_t.allocateNative(ms);
+            final Signal.Sigset_t changedSet = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(changedSet);
             Signal.sigprocmask(0, null, changedSet);
             JnhwTestLogger.logTest("current sigprocmask: " + changedSet.toString());
@@ -755,9 +754,9 @@ public class SignalTest {
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE, OPEN_BSD ->
                 Assertions.assertThrows(NoSuchNativeMethodException.class,
-                        () -> Signal.sigqueue(Unistd.getpid(), SIG, Signal.Sigval.allocateNative(ms)));
+                        () -> Signal.sigqueue(Unistd.getpid(), SIG, Signal.Sigval.allocateNative(ms.scope())));
             default -> {
-                final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms);
+                final Signal.Sigaction act = Signal.Sigaction.allocateNative(ms.scope());
                 act.sa_flags(Signal.SA_SIGINFO);
                 Signal.sigemptyset(act.sa_mask);
 
@@ -769,11 +768,11 @@ public class SignalTest {
                 Callback__V___I_MA_MA<Signal.Siginfo_t, Signal.Ucontext_t> sa_handler = new Callback__V___I_MA_MA<>() {
 
                     @Override
-                    protected void callback(int value, MemoryAddress a, MemoryAddress b) {
+                    protected void callback(int value, MemorySegment a, MemorySegment b) {
                         try {
-                            siginfo_tRef[0] = Signal.Siginfo_t.ofAddress(a, ms);
+                            siginfo_tRef[0] = Signal.Siginfo_t.ofAddress(a.address(), ms.scope());
                             try {
-                                opmRef[0] = Signal.Ucontext_t.tryOfAddress(b, ms);
+                                opmRef[0] = Signal.Ucontext_t.tryOfAddress(b.address(), ms.scope());
                             } catch (NoSuchNativeTypeException nste) {
                                 Assertions.fail(nste);
 
@@ -791,12 +790,12 @@ public class SignalTest {
 
                 act.sa_sigaction(sa_handler);
 
-                final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms);
+                final Signal.Sigaction oact = Signal.Sigaction.allocateNative(ms.scope());
                 Signal.sigaction(SIG, act, oact);
 
-                final MemoryHeap data = MemoryHeap.wrap(MemorySegment.allocateNative(128, ms));
+                final MemoryHeap data = MemoryHeap.wrap(ms.allocate(128));
 
-                Signal.Sigval sigval = Signal.Sigval.allocateNative(ms);
+                Signal.Sigval sigval = Signal.Sigval.allocateNative(ms.scope());
                 sigval.sival_ptr(data);
 
                 Signal.sigqueue(Unistd.getpid(), SIG, sigval);
@@ -829,7 +828,7 @@ public class SignalTest {
                     Assertions.assertAll(
                             () -> Assertions.assertEquals(SIG, valueRef[0].intValue(), "value"),
                             () -> Assertions.assertEquals(SIG, siginfo_tRef[0].si_signo(), "siginfo_tRef.value.si_signo()"),
-                            () -> Assertions.assertEquals(data.toAddressable().address(), siginfo_tRef[0].si_value.sival_ptr(), "siginfo_tRef.value.si_value.sival_ptr()")
+                            () -> Assertions.assertEquals(data.toMemorySegment(), siginfo_tRef[0].si_value.sival_ptr(), "siginfo_tRef.value.si_value.sival_ptr()")
                     );
                 } finally {
                     Signal.sigaction(SIG, oact, null);
@@ -849,7 +848,7 @@ public class SignalTest {
             FunctionPtr__V___I result = Signal.sigset(Signal.SIGABRT, null);
             Assertions.assertEquals(Signal.SIG_DFL, result);
             result = Signal.sigset(Signal.SIGABRT, result);
-            Assertions.assertEquals(MemoryAddress.NULL, result.toAddressable().address(), "result.address ");
+            Assertions.assertEquals(0L, result.toAddress(), "result.address ");
         }
     }
 
@@ -869,16 +868,16 @@ public class SignalTest {
         };
         final var oldHandler = Signal.signal(SIG, funcHandler);
 
-        final var act = Signal.Sigset_t.allocateNative(ms);
+        final var act = Signal.Sigset_t.allocateNative(ms.scope());
         Signal.sigemptyset(act);
         Signal.sigaddset(act, SIG);
 
-        final var oact = Signal.Sigset_t.allocateNative(ms);
+        final var oact = Signal.Sigset_t.allocateNative(ms.scope());
         Signal.sigemptyset(oact);
         Signal.sigprocmask(Signal.SIG_BLOCK, act, oact);
 
         try {
-            final Signal.Sigset_t sigmask = Signal.Sigset_t.allocateNative(ms);
+            final Signal.Sigset_t sigmask = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(sigmask);
             Signal.sigaddset(sigmask, Signal.SIGUSR1);
 
@@ -900,28 +899,28 @@ public class SignalTest {
     public void testSigtimedwait() throws Exception {
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE, OPEN_BSD -> {
-                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
                 Signal.sigemptyset(set);
                 Signal.sigaddset(set, Signal.SIGALRM);
-                final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms);
-                final Time.Timespec timeout = Time.Timespec.allocateNative(ms);
+                final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms.scope());
+                final Time.Timespec timeout = Time.Timespec.allocateNative(ms.scope());
 
                 Assertions.assertThrows(NoSuchNativeMethodException.class,
                         () -> Signal.sigtimedwait(set, info, timeout));
             }
             default -> {
                 final int SIG = Signal.SIGALRM;
-                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
                 Signal.sigemptyset(set);
                 Signal.sigaddset(set, SIG);
-                final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms);
-                final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms);
-                final Time.Timespec timeout = Time.Timespec.allocateNative(ms);
+                final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms.scope());
+                final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms.scope());
+                final Time.Timespec timeout = Time.Timespec.allocateNative(ms.scope());
                 timeout.tv_nsec(0);
                 timeout.tv_sec(10);
                 Signal.sigprocmask(Signal.SIG_BLOCK, set, oset);
                 try {
-                    Signal.pthread_kill(Pthread.pthread_self(ms), SIG); //We need to fire in this thread ...
+                    Signal.pthread_kill(Pthread.pthread_self(ms.scope()), SIG); //We need to fire in this thread ...
                     try {
                         int signal = Signal.sigtimedwait(set, info, timeout);
 
@@ -976,21 +975,21 @@ public class SignalTest {
         final int SIG = Signal.SIGALRM;
 
         Signal.signal(SIG, Signal.SIG_DFL);
-        final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+        final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
         Signal.sigemptyset(set);
         Signal.sigaddset(set, SIG);
-        final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms);
+        final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms.scope());
 
         Signal.sigprocmask(Signal.SIG_BLOCK, set, oset);
         try {
             Signal.raise(SIG);
-            final Signal.Sigset_t testSet = Signal.Sigset_t.allocateNative(ms);
+            final Signal.Sigset_t testSet = Signal.Sigset_t.allocateNative(ms.scope());
             Signal.sigemptyset(testSet);
 
             Signal.sigpending(testSet);
             Assertions.assertTrue(Signal.sigismember(testSet, SIG), "Signal must be pending");
 
-            final Int32_t signal = Int32_t.allocateNative(ms);
+            final Int32_t signal = Int32_t.allocateNative(ms.scope());
             Signal.sigwait(set, signal);
             assertEquals(SIG, signal.int32_t());
 
@@ -1013,23 +1012,23 @@ public class SignalTest {
     public void testSigwaitinfo() throws Exception {
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE, OPEN_BSD -> {
-                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
                 Signal.sigemptyset(set);
                 Signal.sigaddset(set, Signal.SIGALRM);
-                final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms);
+                final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms.scope());
                 Assertions.assertThrows(NoSuchNativeMethodException.class,
                         () -> Signal.sigwaitinfo(set, info));
             }
             default -> {
                 final int SIG = Signal.SIGALRM;
                 Signal.signal(SIG, Signal.SIG_DFL);
-                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms);
+                final Signal.Sigset_t set = Signal.Sigset_t.allocateNative(ms.scope());
                 Signal.sigemptyset(set);
                 Signal.sigaddset(set, SIG);
-                final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms);
+                final Signal.Sigset_t oset = Signal.Sigset_t.allocateNative(ms.scope());
                 Signal.sigprocmask(Signal.SIG_BLOCK, set, oset);
                 try {
-                    final Signal.Sigset_t testSet = Signal.Sigset_t.allocateNative(ms);
+                    final Signal.Sigset_t testSet = Signal.Sigset_t.allocateNative(ms.scope());
                     Signal.sigemptyset(testSet);
                     /*
                     If the test fails after raising the signal
@@ -1041,7 +1040,7 @@ public class SignalTest {
 
                     Assertions.assertTrue(Signal.sigismember(testSet, SIG), "Signal must be pending");
 
-                    final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms);
+                    final Signal.Siginfo_t info = Signal.Siginfo_t.allocateNative(ms.scope());
                     try {
                         final int signal = Signal.sigwaitinfo(set, info);
 
@@ -1092,18 +1091,18 @@ public class SignalTest {
 
     @Test
     public void testUnionSigval() throws Exception {
-        MemoryHeap mem = MemoryHeap.wrap(MemorySegment.allocateNative(2, ms));
-        Signal.Sigval<MemoryHeap> sigval = Signal.Sigval.allocateNative(ms);
+        MemoryHeap mem = MemoryHeap.wrap(ms.allocate(2));
+        Signal.Sigval<MemoryHeap> sigval = Signal.Sigval.allocateNative(ms.scope());
         sigval.sival_int(0x0223344);
         assertEquals(0x0223344, sigval.sival_int());
         sigval.sival_ptr(mem);
-        assertEquals(mem.toAddressable().address(), sigval.sival_ptr());
+        assertEquals(mem.toMemorySegment(), sigval.sival_ptr());
         Assertions.assertNotEquals(22, sigval.sival_int()); //Its is a union, so it must now be different
     }
 
     @Test
     public void testStructSiginfo_t() throws Exception {
-        Signal.Siginfo_t siginfo_t = Signal.Siginfo_t.allocateNative(ms);
+        Signal.Siginfo_t siginfo_t = Signal.Siginfo_t.allocateNative(ms.scope());
         Assertions.assertNotNull(siginfo_t.si_addr());
         if (MultiarchTupelBuilder.getOS() == OS.OPEN_BSD) {
             Assertions.assertThrows(NoSuchNativeTypeMemberException.class, () -> siginfo_t.si_band());
@@ -1122,9 +1121,9 @@ public class SignalTest {
     @Test
     public void testStructSigevent_t() throws Exception {
         if (MultiarchTupelBuilder.getOS() == OS.OPEN_BSD) {
-            Assertions.assertThrows(NoSuchNativeTypeException.class, () -> Signal.Sigevent.tryAllocateNative(ms));
+            Assertions.assertThrows(NoSuchNativeTypeException.class, () -> Signal.Sigevent.tryAllocateNative(ms.scope()));
         } else {
-            Signal.Sigevent<OpaqueMemory> sigevent = Signal.Sigevent.tryAllocateNative(ms);
+            Signal.Sigevent<OpaqueMemory> sigevent = Signal.Sigevent.tryAllocateNative(ms.scope());
             Assertions.assertNotNull(sigevent.sigev_notify());
             Assertions.assertNotNull(sigevent.sigev_signo());
             sigevent.sigev_value.sival_int(66);
@@ -1134,22 +1133,19 @@ public class SignalTest {
             sigevent.sigev_signo(Signal.SIGBUS);
             assertEquals(Signal.SIGBUS, sigevent.sigev_signo());
 
-            Callback__V__UnionSigval<OpaqueMemory> sigev_notify_function_dummy = new Callback__V__UnionSigval(MemoryAddress.ofLong(44)) {
+            Callback__V__UnionSigval<OpaqueMemory> sigev_notify_function_dummy = new Callback__V__UnionSigval(MemorySegment.ofAddress(44)) {
                 @Override
-                protected void callback(MemoryAddress sival_ptr, int sival_int) {
+                protected void callback(MemorySegment sival_ptr, int sival_int) {
                     throw new AssertionError("Never expected to be called");
                 }
             };
             sigevent.sigev_notify_function(sigev_notify_function_dummy);
             Assertions.assertSame(sigev_notify_function_dummy, sigevent.sigev_notify_functionAsCallback__V_Struct_Sigval());
 
-            Pthread.Pthread_attr_t pthread_attr_t = Pthread.Pthread_attr_t.allocateNative(ms);
+            Pthread.Pthread_attr_t pthread_attr_t = Pthread.Pthread_attr_t.allocateNative(ms.scope());
             Pthread.pthread_attr_init(pthread_attr_t);
             sigevent.sigev_notify_attributes(pthread_attr_t);
-            final Pthread.Pthread_attr_t pthread_attr_t1
-                    = sigevent.sigev_notify_attributes((baseAddress, scope, parent) -> {
-                        return new Pthread.Pthread_attr_t(baseAddress, scope);
-                    }, ms);
+            final Pthread.Pthread_attr_t pthread_attr_t1 = sigevent.sigev_notify_attributesAs();
             Assertions.assertSame(pthread_attr_t, pthread_attr_t1);
             Pthread.pthread_attr_destroy(pthread_attr_t);
         }
@@ -1157,16 +1153,10 @@ public class SignalTest {
 
     @Test
     public void testStructStack_t() throws Exception {
-        Signal.Stack_t<OpaqueMemory> stack_t = Signal.Stack_t.allocateNative(ms);
+        Signal.Stack_t<OpaqueMemory> stack_t = Signal.Stack_t.allocateNative(ms.scope());
         Assertions.assertEquals(0, stack_t.ss_flags());
         Assertions.assertEquals(0, stack_t.ss_size());
-        Assertions.assertNull(stack_t.ss_sp((baseAddress, scope, parent) -> {
-            if (parent.ss_size() > 0) {
-                return new MemoryHeap(baseAddress, scope, parent.ss_size());
-            } else {
-                return null;
-            }
-        }, ms));
+        Assertions.assertEquals(0L, stack_t.ss_sp().address());
     }
 
     @Test
@@ -1174,17 +1164,17 @@ public class SignalTest {
         switch (MultiarchTupelBuilder.getOS()) {
             case APPLE, OPEN_BSD ->
                 Assertions.assertThrows(NoSuchNativeTypeException.class,
-                        () -> Signal.Ucontext_t.tryAllocateNative(ms));
+                        () -> Signal.Ucontext_t.tryAllocateNative(ms.scope()));
             default -> {
-                Signal.Ucontext_t ucontext_t = Signal.Ucontext_t.tryAllocateNative(ms);
+                Signal.Ucontext_t ucontext_t = Signal.Ucontext_t.tryAllocateNative(ms.scope());
                 Assertions.assertNull(ucontext_t.uc_link((baseAddress, scope, parent) -> {
                     try {
-                        return MemoryAddress.NULL.equals(baseAddress) ? null : Signal.Ucontext_t.tryOfAddress(baseAddress, scope);
+                        return baseAddress.address() == 0L ? null : Signal.Ucontext_t.tryOfAddress(baseAddress.address(), scope);
                     } catch (NoSuchNativeTypeException nste) {
                         Assertions.fail(nste);
                         throw new RuntimeException(nste);
                     }
-                }, ms)); //Maybe fail sometimes....
+                }, ms.scope())); //Maybe fail sometimes....
                 Assertions.assertNotNull(ucontext_t.uc_mcontext);
                 Assertions.assertNotNull(ucontext_t.uc_sigmask);
                 Assertions.assertNotNull(ucontext_t.uc_stack);
@@ -1196,21 +1186,21 @@ public class SignalTest {
     public void testStructMcontext_t() throws Exception {
         if (MultiarchTupelBuilder.getOS() == OS.OPEN_BSD) {
             Assertions.assertThrows(NoSuchNativeTypeException.class,
-                    () -> Signal.Mcontext_t.tryAllocateNative(ms));
+                    () -> Signal.Mcontext_t.tryAllocateNative(ms.scope()));
         } else {
-            Signal.Mcontext_t mcontext_t = Signal.Mcontext_t.tryAllocateNative(ms);
+            Signal.Mcontext_t mcontext_t = Signal.Mcontext_t.tryAllocateNative(ms.scope());
             Assertions.assertNotNull(mcontext_t); //Opaque to us
         }
     }
 
     @Test
     public void testStructSigaction() throws Exception {
-        Signal.Sigaction<OpaqueMemory> sigaction = Signal.Sigaction.allocateNative(ms);
+        Signal.Sigaction<OpaqueMemory> sigaction = Signal.Sigaction.allocateNative(ms.scope());
 
         sigaction.sa_flags(22);
         assertEquals(22, sigaction.sa_flags());
 
-        Callback__V___I sa_handler = new Callback__V___I(MemoryAddress.ofLong(33)) {
+        Callback__V___I sa_handler = new Callback__V___I(MemorySegment.ofAddress(33)) {
             @Override
             protected void callback(int value) {
                 throw new AssertionError("Never expected to be called");
@@ -1220,9 +1210,9 @@ public class SignalTest {
         Assertions.assertSame(sa_handler, sigaction.sa_handlerAsCallback_I_V());
 
         @SuppressWarnings("unchecked")
-        Callback__V___I_MA_MA<Signal.Siginfo_t, OpaqueMemory> sa_sigaction = new Callback__V___I_MA_MA<>(MemoryAddress.ofLong(44)) {
+        Callback__V___I_MA_MA<Signal.Siginfo_t, OpaqueMemory> sa_sigaction = new Callback__V___I_MA_MA<>(MemorySegment.ofAddress(44)) {
             @Override
-            protected void callback(int value, MemoryAddress a, MemoryAddress b) {
+            protected void callback(int value, MemorySegment a, MemorySegment b) {
                 throw new AssertionError("Never expected to be called");
             }
         };
