@@ -28,16 +28,15 @@ import de.ibapl.jnhw.common.memory.Int8_t;
 import de.ibapl.jnhw.common.memory.MemoryArray;
 import de.ibapl.jnhw.common.memory.MemoryHeap;
 import de.ibapl.jnhw.common.memory.OpaqueMemory;
-import de.ibapl.jnhw.libloader.MultiarchTupelBuilder;
-import de.ibapl.jnhw.libloader.OS;
 import de.ibapl.jnhw.posix.sys.Stat;
 import de.ibapl.jnhw.util.posix.Defines;
 import de.ibapl.jnhw.util.posix.DefinesTest;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentScope;
 import java.nio.ByteBuffer;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
@@ -75,7 +74,7 @@ public class UnistdTest {
         JnhwTestLogger.logAfterAll(testTnfo);
     }
 
-    private MemorySession ms;
+    private Arena ms;
 
     private int fd;
     byte[] readBytes = new byte[1024];
@@ -114,7 +113,7 @@ public class UnistdTest {
     public void setUp(TestInfo testInfo) throws Exception {
         JnhwTestLogger.logBeforeEach(testInfo);
         fd = -1;
-        ms = MemorySession.openConfined();
+        ms = Arena.openConfined();
     }
 
     @AfterEach
@@ -173,7 +172,7 @@ public class UnistdTest {
 
     @Test
     public void testBufReadWrongArgs() throws Exception {
-        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms);
+        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms.scope());
         Unistd.pipe(filedes);
         try {
             Assertions.assertThrows(NullPointerException.class, () -> {
@@ -199,7 +198,7 @@ public class UnistdTest {
 
     @Test
     public void testBufWriteWrongArgs() throws Exception {
-        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms);
+        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms.scope());
         Unistd.pipe(filedes);
         try {
             Assertions.assertThrows(NullPointerException.class, () -> {
@@ -290,7 +289,7 @@ public class UnistdTest {
 
     @Test
     public void testPipe() throws Exception {
-        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms);
+        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms.scope());
         Unistd.pipe(filedes);
         try {
             int written = Unistd.write(filedes.writeFd(), writeBytes);
@@ -308,7 +307,7 @@ public class UnistdTest {
 
     @Test
     public void testPipeWithHeapBufferOffset() throws Exception {
-        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms);
+        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms.scope());
         Unistd.pipe(filedes);
         try {
             final int BYTES_TO_WRITE = 4;
@@ -343,7 +342,7 @@ public class UnistdTest {
 
     @Test
     public void testPipeWithReadOnlyBuffer() throws Exception {
-        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms);
+        Unistd.JnhwPipeFiledes filedes = Unistd.JnhwPipeFiledes.allocateNative(ms.scope());
         Unistd.pipe(filedes);
         try {
             final ByteBuffer writeBuffer = ByteBuffer.wrap(this.writeBytes).asReadOnlyBuffer();
@@ -371,7 +370,7 @@ public class UnistdTest {
             return new Int32_t(memorySegment, elementoffset);
         }
 
-        public final static TestPipeFiledes_1 allocateNative(MemorySession ms) {
+        public final static TestPipeFiledes_1 allocateNative(SegmentScope ms) {
             return new TestPipeFiledes_1(MemorySegment.allocateNative(Int32_t.DATA_TYPE.SIZE_OF * ARRAY_LENGTH, ms), 0);
         }
 
@@ -386,7 +385,7 @@ public class UnistdTest {
         Assertions.assertThrows(NullPointerException.class, () -> {
             Unistd.pipe(null);
         });
-        TestPipeFiledes_1 filedes = TestPipeFiledes_1.allocateNative(ms);
+        TestPipeFiledes_1 filedes = TestPipeFiledes_1.allocateNative(ms.scope());
         Assertions.assertThrows(IllegalArgumentException.class, () -> {
             Unistd.pipe(filedes);
         });
@@ -422,7 +421,7 @@ public class UnistdTest {
     public void testReadOpaqueMemory() throws Exception {
         writeData();
         fd = Fcntl.open(f.getAbsolutePath(), Fcntl.O_RDONLY);
-        MemoryHeap om = MemoryHeap.wrap(MemorySegment.allocateNative(TEST_DATA.length, ms));
+        MemoryHeap om = MemoryHeap.wrap(ms.allocate(TEST_DATA.length));
         long read = Unistd.read(fd, om, POS, LEN);
         Assertions.assertEquals(LEN, read);
         byte[] result = OpaqueMemory.toBytes(om);
@@ -434,7 +433,7 @@ public class UnistdTest {
         writeData();
         fd = Fcntl.open(f.getAbsolutePath(), Fcntl.O_RDONLY);
         byte[] result = new byte[TEST_DATA.length];
-        Int8_t data = Int8_t.allocateNative(ms);
+        Int8_t data = Int8_t.allocateNative(ms.scope());
         for (int i = POS; i < POS + LEN; i++) {
             long read = Unistd.read(fd, data);
             Assertions.assertEquals(1, read);
@@ -466,7 +465,7 @@ public class UnistdTest {
     @Test
     public void testWriteOpaqueMemory() throws Exception {
         fd = Fcntl.open(f.getAbsolutePath(), Fcntl.O_CREAT | Fcntl.O_WRONLY, Stat.S_IRUSR | Stat.S_IWUSR);
-        MemoryHeap om = MemoryHeap.wrap(MemorySegment.allocateNative(TEST_DATA.length, ms));
+        MemoryHeap om = MemoryHeap.wrap(ms.allocate(TEST_DATA.length));
         OpaqueMemory.copy(TEST_DATA, 0, om, 0, TEST_DATA.length);
         Unistd.write(fd, om, POS, LEN);
         byte[] data = readData();
@@ -509,8 +508,8 @@ public class UnistdTest {
     @Test
     public void testWriteReadByteRef10MB() throws Exception {
         fd = Fcntl.open(f.getAbsolutePath(), Fcntl.O_CREAT | Fcntl.O_RDWR);
-        Int8_t srcData = Int8_t.allocateNative(ms);
-        Int8_t destData = Int8_t.allocateNative(ms);
+        Int8_t srcData = Int8_t.allocateNative(ms.scope());
+        Int8_t destData = Int8_t.allocateNative(ms.scope());
         srcData.int8_t((byte) 1);
         long written = 0;
         for (int i = 0; i < 1_000; i++) {
@@ -520,7 +519,7 @@ public class UnistdTest {
         Unistd.lseek(fd, 0, Unistd.SEEK_SET);
 
         long read = 0;
-        Int8_t data = Int8_t.allocateNative(ms);
+        Int8_t data = Int8_t.allocateNative(ms.scope());
         for (int i = 0; i < 1_000; i++) {
             read += Unistd.read(fd, data);
             Assertions.assertEquals(1, data.int8_t());
@@ -539,9 +538,9 @@ public class UnistdTest {
      */
     @Test
     public void testWriteReadByte10MB() throws Exception {
-        Int8_t srcData = Int8_t.allocateNative(ms);
+        Int8_t srcData = Int8_t.allocateNative(ms.scope());
         srcData.int8_t((byte) 1);
-        Int8_t destData = Int8_t.allocateNative(ms);
+        Int8_t destData = Int8_t.allocateNative(ms.scope());
 
         fd = Fcntl.open(f.getAbsolutePath(), Fcntl.O_CREAT | Fcntl.O_RDWR);
         long written = 0;
@@ -615,7 +614,7 @@ public class UnistdTest {
     @Test
     public void testWriteReadOpaqueMemory_10MB() throws Exception {
         fd = Fcntl.open(f.getAbsolutePath(), Fcntl.O_CREAT | Fcntl.O_RDWR);
-        MemoryHeap mem = MemoryHeap.wrap(MemorySegment.allocateNative(10_000_000, ms));
+        MemoryHeap mem = MemoryHeap.wrap(ms.allocate(10_000_000));
         long written = Unistd.write(fd, mem);
         Assertions.assertEquals(mem.sizeof(), written);
         Unistd.lseek(fd, 0, Unistd.SEEK_SET);
@@ -626,7 +625,7 @@ public class UnistdTest {
     @Test
     public void testWriteSingle() throws Exception {
         fd = Fcntl.creat(f.getAbsolutePath(), Stat.S_IRUSR | Stat.S_IWUSR);
-        Int8_t srcData = Int8_t.allocateNative(ms);
+        Int8_t srcData = Int8_t.allocateNative(ms.scope());
 
         for (int i = POS; i < POS + LEN; i++) {
             srcData.int8_t(TEST_DATA[i]);
