@@ -23,8 +23,8 @@ package de.ibapl.jnhw.winapi;
 
 import de.ibapl.jnhw.common.memory.OpaqueMemory;
 import de.ibapl.jnhw.util.winapi.WinApiDataType;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.nio.charset.Charset;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
@@ -36,11 +36,11 @@ import org.junit.jupiter.api.condition.EnabledOnOs;
 @EnabledOnOs(org.junit.jupiter.api.condition.OS.WINDOWS)
 public class WinntTest {
 
-    private MemorySession ms;
+    private Arena ms;
 
     @BeforeEach
     public void setUp() throws Exception {
-        ms = MemorySession.openConfined();
+        ms = Arena.openConfined();
     }
 
     @AfterEach
@@ -58,7 +58,7 @@ public class WinntTest {
     public void test_LPWSTR_stringValueOfNullTerminated() throws Exception {
         final String str = "HELLO WORLD!\0";
         byte[] data = str.getBytes(Charset.forName("UTF-16LE"));
-        Winnt.LPWSTR lpWStr = Winnt.LPWSTR.allocateNative(64, ms);
+        Winnt.LPWSTR lpWStr = Winnt.LPWSTR.allocateNative(64, ms.scope());
         OpaqueMemory.copy(data, 0, lpWStr, 0, data.length);
         Assertions.assertEquals("HELLO WORLD!", lpWStr.getUnicodeString(str.length() - 1));
         Assertions.assertEquals("HELLO WORLD!", lpWStr.getUnicodeString(data.length / WinApiDataType.WCHAR.SIZE_OF - 1));
@@ -66,8 +66,8 @@ public class WinntTest {
 
     @Test
     public void testArrayOfHandle() throws Exception {
-        Winnt.ArrayOfHandle aoh = Winnt.ArrayOfHandle.allocateNative(3, ms);
-        Winnt.HANDLE h1 = Winnt.HANDLE.of(MemoryAddress.ofLong(42));
+        Winnt.ArrayOfHandle aoh = Winnt.ArrayOfHandle.allocateNative(3, ms.scope());
+        Winnt.HANDLE h1 = Winnt.HANDLE.of(MemorySegment.ofAddress(42));
         aoh.set(1, h1);
         Winnt.HANDLE h2 = Winnt.HANDLE.INVALID_HANDLE_VALUE;
         aoh.set(2, h2);
